parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    UMINUS

Grammar

Rule 0     S' -> program
Rule 1     program -> stmts
Rule 2     stmts -> stmt SEMICOLON stmts
Rule 3     stmts -> block stmts
Rule 4     stmts -> conditional stmts
Rule 5     stmts -> loop stmts
Rule 6     stmts -> function stmts
Rule 7     stmts -> empty
Rule 8     conditional -> IF LPAREN expression RPAREN block
Rule 9     conditional -> IF LPAREN expression RPAREN block ELSE block
Rule 10    loop -> WHILE LPAREN expression RPAREN block
Rule 11    block -> LCURLY stmts RCURLY
Rule 12    stmt -> expression
Rule 13    stmt -> assignment
Rule 14    stmt -> print
Rule 15    stmt -> return
Rule 16    function -> ID LPAREN parameters RPAREN block
Rule 17    function -> ID LPAREN RPAREN block
Rule 18    parameters -> parameters COMMA ID
Rule 19    parameters -> ID
Rule 20    return -> RETURN expression
Rule 21    print -> PRINT LPAREN expression RPAREN
Rule 22    functioncall -> ID LPAREN list RPAREN
Rule 23    functioncall -> ID LPAREN RPAREN
Rule 24    expression -> logical
Rule 25    expression -> mathexpression
Rule 26    expression -> comparison
Rule 27    expression -> factor
Rule 28    expression -> lentry
Rule 29    expression -> lindex
Rule 30    expression -> functioncall
Rule 31    lindex -> expression LBRACKET expression RBRACKET
Rule 32    logical -> NOT expression
Rule 33    logical -> expression AND expression
Rule 34    logical -> expression OR expression
Rule 35    logical -> expression IN expression
Rule 36    comparison -> expression LT expression
Rule 37    comparison -> expression LTE expression
Rule 38    comparison -> expression GT expression
Rule 39    comparison -> expression GTE expression
Rule 40    comparison -> expression NE expression
Rule 41    comparison -> expression EE expression
Rule 42    assignment -> ID EQUALS expression
Rule 43    assignment -> expression LBRACKET expression RBRACKET EQUALS expression
Rule 44    mathexpression -> expression PLUS expression
Rule 45    mathexpression -> expression TIMES expression
Rule 46    mathexpression -> expression MINUS expression
Rule 47    mathexpression -> expression DIVIDE expression
Rule 48    mathexpression -> expression INTDIVIDE expression
Rule 49    mathexpression -> expression EXPONENT expression
Rule 50    mathexpression -> expression MODULUS expression
Rule 51    mathexpression -> MINUS factor
Rule 52    factor -> LPAREN expression RPAREN
Rule 53    factor -> NUMBER
Rule 54    factor -> REAL
Rule 55    factor -> STRING
Rule 56    factor -> variable
Rule 57    variable -> ID
Rule 58    lentry -> LBRACKET RBRACKET
Rule 59    lentry -> LBRACKET list RBRACKET
Rule 60    list -> listhead elem
Rule 61    listhead -> listhead elem COMMA
Rule 62    listhead -> empty
Rule 63    elem -> expression
Rule 64    empty -> <empty>

Terminals, with rules where they appear

AND                  : 33
COMMA                : 18 61
DIVIDE               : 47
EE                   : 41
ELSE                 : 9
EQUALS               : 42 43
EXPONENT             : 49
GT                   : 38
GTE                  : 39
ID                   : 16 17 18 19 22 23 42 57
IF                   : 8 9
IN                   : 35
INTDIVIDE            : 48
LBRACKET             : 31 43 58 59
LCURLY               : 11
LPAREN               : 8 9 10 16 17 21 22 23 52
LT                   : 36
LTE                  : 37
MINUS                : 46 51
MODULUS              : 50
NE                   : 40
NOT                  : 32
NUMBER               : 53
OR                   : 34
PLUS                 : 44
PRINT                : 21
RBRACKET             : 31 43 58 59
RCURLY               : 11
REAL                 : 54
RETURN               : 20
RPAREN               : 8 9 10 16 17 21 22 23 52
SEMICOLON            : 2
STRING               : 55
TIMES                : 45
UMINUS               : 
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

assignment           : 13
block                : 3 8 9 9 10 16 17
comparison           : 26
conditional          : 4
elem                 : 60 61
empty                : 7 62
expression           : 8 9 10 12 20 21 31 31 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 43 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 52 63
factor               : 27 51
function             : 6
functioncall         : 30
lentry               : 28
lindex               : 29
list                 : 22 59
listhead             : 60 61
logical              : 24
loop                 : 5
mathexpression       : 25
parameters           : 16 18
print                : 14
program              : 0
return               : 15
stmt                 : 2
stmts                : 1 2 3 4 5 6 11
variable             : 56

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmts
    (2) stmts -> . stmt SEMICOLON stmts
    (3) stmts -> . block stmts
    (4) stmts -> . conditional stmts
    (5) stmts -> . loop stmts
    (6) stmts -> . function stmts
    (7) stmts -> . empty
    (12) stmt -> . expression
    (13) stmt -> . assignment
    (14) stmt -> . print
    (15) stmt -> . return
    (11) block -> . LCURLY stmts RCURLY
    (8) conditional -> . IF LPAREN expression RPAREN block
    (9) conditional -> . IF LPAREN expression RPAREN block ELSE block
    (10) loop -> . WHILE LPAREN expression RPAREN block
    (16) function -> . ID LPAREN parameters RPAREN block
    (17) function -> . ID LPAREN RPAREN block
    (64) empty -> .
    (24) expression -> . logical
    (25) expression -> . mathexpression
    (26) expression -> . comparison
    (27) expression -> . factor
    (28) expression -> . lentry
    (29) expression -> . lindex
    (30) expression -> . functioncall
    (42) assignment -> . ID EQUALS expression
    (43) assignment -> . expression LBRACKET expression RBRACKET EQUALS expression
    (21) print -> . PRINT LPAREN expression RPAREN
    (20) return -> . RETURN expression
    (32) logical -> . NOT expression
    (33) logical -> . expression AND expression
    (34) logical -> . expression OR expression
    (35) logical -> . expression IN expression
    (44) mathexpression -> . expression PLUS expression
    (45) mathexpression -> . expression TIMES expression
    (46) mathexpression -> . expression MINUS expression
    (47) mathexpression -> . expression DIVIDE expression
    (48) mathexpression -> . expression INTDIVIDE expression
    (49) mathexpression -> . expression EXPONENT expression
    (50) mathexpression -> . expression MODULUS expression
    (51) mathexpression -> . MINUS factor
    (36) comparison -> . expression LT expression
    (37) comparison -> . expression LTE expression
    (38) comparison -> . expression GT expression
    (39) comparison -> . expression GTE expression
    (40) comparison -> . expression NE expression
    (41) comparison -> . expression EE expression
    (52) factor -> . LPAREN expression RPAREN
    (53) factor -> . NUMBER
    (54) factor -> . REAL
    (55) factor -> . STRING
    (56) factor -> . variable
    (58) lentry -> . LBRACKET RBRACKET
    (59) lentry -> . LBRACKET list RBRACKET
    (31) lindex -> . expression LBRACKET expression RBRACKET
    (22) functioncall -> . ID LPAREN list RPAREN
    (23) functioncall -> . ID LPAREN RPAREN
    (57) variable -> . ID

    LCURLY          shift and go to state 31
    IF              shift and go to state 7
    WHILE           shift and go to state 24
    ID              shift and go to state 20
    $end            reduce using rule 64 (empty -> .)
    PRINT           shift and go to state 15
    RETURN          shift and go to state 33
    NOT             shift and go to state 11
    MINUS           shift and go to state 2
    LPAREN          shift and go to state 1
    NUMBER          shift and go to state 29
    REAL            shift and go to state 27
    STRING          shift and go to state 25
    LBRACKET        shift and go to state 8

    block                          shift and go to state 3
    empty                          shift and go to state 4
    conditional                    shift and go to state 5
    variable                       shift and go to state 26
    print                          shift and go to state 6
    logical                        shift and go to state 9
    loop                           shift and go to state 16
    lentry                         shift and go to state 28
    expression                     shift and go to state 13
    mathexpression                 shift and go to state 14
    assignment                     shift and go to state 30
    function                       shift and go to state 10
    return                         shift and go to state 23
    functioncall                   shift and go to state 22
    lindex                         shift and go to state 17
    comparison                     shift and go to state 18
    factor                         shift and go to state 12
    stmt                           shift and go to state 19
    program                        shift and go to state 21
    stmts                          shift and go to state 32

state 1

    (52) factor -> LPAREN . expression RPAREN
    (24) expression -> . logical
    (25) expression -> . mathexpression
    (26) expression -> . comparison
    (27) expression -> . factor
    (28) expression -> . lentry
    (29) expression -> . lindex
    (30) expression -> . functioncall
    (32) logical -> . NOT expression
    (33) logical -> . expression AND expression
    (34) logical -> . expression OR expression
    (35) logical -> . expression IN expression
    (44) mathexpression -> . expression PLUS expression
    (45) mathexpression -> . expression TIMES expression
    (46) mathexpression -> . expression MINUS expression
    (47) mathexpression -> . expression DIVIDE expression
    (48) mathexpression -> . expression INTDIVIDE expression
    (49) mathexpression -> . expression EXPONENT expression
    (50) mathexpression -> . expression MODULUS expression
    (51) mathexpression -> . MINUS factor
    (36) comparison -> . expression LT expression
    (37) comparison -> . expression LTE expression
    (38) comparison -> . expression GT expression
    (39) comparison -> . expression GTE expression
    (40) comparison -> . expression NE expression
    (41) comparison -> . expression EE expression
    (52) factor -> . LPAREN expression RPAREN
    (53) factor -> . NUMBER
    (54) factor -> . REAL
    (55) factor -> . STRING
    (56) factor -> . variable
    (58) lentry -> . LBRACKET RBRACKET
    (59) lentry -> . LBRACKET list RBRACKET
    (31) lindex -> . expression LBRACKET expression RBRACKET
    (22) functioncall -> . ID LPAREN list RPAREN
    (23) functioncall -> . ID LPAREN RPAREN
    (57) variable -> . ID

    NOT             shift and go to state 11
    MINUS           shift and go to state 2
    LPAREN          shift and go to state 1
    NUMBER          shift and go to state 29
    REAL            shift and go to state 27
    STRING          shift and go to state 25
    LBRACKET        shift and go to state 8
    ID              shift and go to state 35

    mathexpression                 shift and go to state 14
    lindex                         shift and go to state 17
    comparison                     shift and go to state 18
    logical                        shift and go to state 9
    expression                     shift and go to state 34
    variable                       shift and go to state 26
    lentry                         shift and go to state 28
    factor                         shift and go to state 12
    functioncall                   shift and go to state 22

state 2

    (51) mathexpression -> MINUS . factor
    (52) factor -> . LPAREN expression RPAREN
    (53) factor -> . NUMBER
    (54) factor -> . REAL
    (55) factor -> . STRING
    (56) factor -> . variable
    (57) variable -> . ID

    LPAREN          shift and go to state 1
    NUMBER          shift and go to state 29
    REAL            shift and go to state 27
    STRING          shift and go to state 25
    ID              shift and go to state 36

    variable                       shift and go to state 26
    factor                         shift and go to state 37

state 3

    (3) stmts -> block . stmts
    (2) stmts -> . stmt SEMICOLON stmts
    (3) stmts -> . block stmts
    (4) stmts -> . conditional stmts
    (5) stmts -> . loop stmts
    (6) stmts -> . function stmts
    (7) stmts -> . empty
    (12) stmt -> . expression
    (13) stmt -> . assignment
    (14) stmt -> . print
    (15) stmt -> . return
    (11) block -> . LCURLY stmts RCURLY
    (8) conditional -> . IF LPAREN expression RPAREN block
    (9) conditional -> . IF LPAREN expression RPAREN block ELSE block
    (10) loop -> . WHILE LPAREN expression RPAREN block
    (16) function -> . ID LPAREN parameters RPAREN block
    (17) function -> . ID LPAREN RPAREN block
    (64) empty -> .
    (24) expression -> . logical
    (25) expression -> . mathexpression
    (26) expression -> . comparison
    (27) expression -> . factor
    (28) expression -> . lentry
    (29) expression -> . lindex
    (30) expression -> . functioncall
    (42) assignment -> . ID EQUALS expression
    (43) assignment -> . expression LBRACKET expression RBRACKET EQUALS expression
    (21) print -> . PRINT LPAREN expression RPAREN
    (20) return -> . RETURN expression
    (32) logical -> . NOT expression
    (33) logical -> . expression AND expression
    (34) logical -> . expression OR expression
    (35) logical -> . expression IN expression
    (44) mathexpression -> . expression PLUS expression
    (45) mathexpression -> . expression TIMES expression
    (46) mathexpression -> . expression MINUS expression
    (47) mathexpression -> . expression DIVIDE expression
    (48) mathexpression -> . expression INTDIVIDE expression
    (49) mathexpression -> . expression EXPONENT expression
    (50) mathexpression -> . expression MODULUS expression
    (51) mathexpression -> . MINUS factor
    (36) comparison -> . expression LT expression
    (37) comparison -> . expression LTE expression
    (38) comparison -> . expression GT expression
    (39) comparison -> . expression GTE expression
    (40) comparison -> . expression NE expression
    (41) comparison -> . expression EE expression
    (52) factor -> . LPAREN expression RPAREN
    (53) factor -> . NUMBER
    (54) factor -> . REAL
    (55) factor -> . STRING
    (56) factor -> . variable
    (58) lentry -> . LBRACKET RBRACKET
    (59) lentry -> . LBRACKET list RBRACKET
    (31) lindex -> . expression LBRACKET expression RBRACKET
    (22) functioncall -> . ID LPAREN list RPAREN
    (23) functioncall -> . ID LPAREN RPAREN
    (57) variable -> . ID

    LCURLY          shift and go to state 31
    IF              shift and go to state 7
    WHILE           shift and go to state 24
    ID              shift and go to state 20
    $end            reduce using rule 64 (empty -> .)
    RCURLY          reduce using rule 64 (empty -> .)
    PRINT           shift and go to state 15
    RETURN          shift and go to state 33
    NOT             shift and go to state 11
    MINUS           shift and go to state 2
    LPAREN          shift and go to state 1
    NUMBER          shift and go to state 29
    REAL            shift and go to state 27
    STRING          shift and go to state 25
    LBRACKET        shift and go to state 8

    mathexpression                 shift and go to state 14
    block                          shift and go to state 3
    empty                          shift and go to state 4
    conditional                    shift and go to state 5
    comparison                     shift and go to state 18
    functioncall                   shift and go to state 22
    return                         shift and go to state 23
    variable                       shift and go to state 26
    lindex                         shift and go to state 17
    assignment                     shift and go to state 30
    print                          shift and go to state 6
    lentry                         shift and go to state 28
    stmt                           shift and go to state 19
    stmts                          shift and go to state 38
    logical                        shift and go to state 9
    function                       shift and go to state 10
    loop                           shift and go to state 16
    factor                         shift and go to state 12
    expression                     shift and go to state 13

state 4

    (7) stmts -> empty .

    RCURLY          reduce using rule 7 (stmts -> empty .)
    $end            reduce using rule 7 (stmts -> empty .)


state 5

    (4) stmts -> conditional . stmts
    (2) stmts -> . stmt SEMICOLON stmts
    (3) stmts -> . block stmts
    (4) stmts -> . conditional stmts
    (5) stmts -> . loop stmts
    (6) stmts -> . function stmts
    (7) stmts -> . empty
    (12) stmt -> . expression
    (13) stmt -> . assignment
    (14) stmt -> . print
    (15) stmt -> . return
    (11) block -> . LCURLY stmts RCURLY
    (8) conditional -> . IF LPAREN expression RPAREN block
    (9) conditional -> . IF LPAREN expression RPAREN block ELSE block
    (10) loop -> . WHILE LPAREN expression RPAREN block
    (16) function -> . ID LPAREN parameters RPAREN block
    (17) function -> . ID LPAREN RPAREN block
    (64) empty -> .
    (24) expression -> . logical
    (25) expression -> . mathexpression
    (26) expression -> . comparison
    (27) expression -> . factor
    (28) expression -> . lentry
    (29) expression -> . lindex
    (30) expression -> . functioncall
    (42) assignment -> . ID EQUALS expression
    (43) assignment -> . expression LBRACKET expression RBRACKET EQUALS expression
    (21) print -> . PRINT LPAREN expression RPAREN
    (20) return -> . RETURN expression
    (32) logical -> . NOT expression
    (33) logical -> . expression AND expression
    (34) logical -> . expression OR expression
    (35) logical -> . expression IN expression
    (44) mathexpression -> . expression PLUS expression
    (45) mathexpression -> . expression TIMES expression
    (46) mathexpression -> . expression MINUS expression
    (47) mathexpression -> . expression DIVIDE expression
    (48) mathexpression -> . expression INTDIVIDE expression
    (49) mathexpression -> . expression EXPONENT expression
    (50) mathexpression -> . expression MODULUS expression
    (51) mathexpression -> . MINUS factor
    (36) comparison -> . expression LT expression
    (37) comparison -> . expression LTE expression
    (38) comparison -> . expression GT expression
    (39) comparison -> . expression GTE expression
    (40) comparison -> . expression NE expression
    (41) comparison -> . expression EE expression
    (52) factor -> . LPAREN expression RPAREN
    (53) factor -> . NUMBER
    (54) factor -> . REAL
    (55) factor -> . STRING
    (56) factor -> . variable
    (58) lentry -> . LBRACKET RBRACKET
    (59) lentry -> . LBRACKET list RBRACKET
    (31) lindex -> . expression LBRACKET expression RBRACKET
    (22) functioncall -> . ID LPAREN list RPAREN
    (23) functioncall -> . ID LPAREN RPAREN
    (57) variable -> . ID

    LCURLY          shift and go to state 31
    IF              shift and go to state 7
    WHILE           shift and go to state 24
    ID              shift and go to state 20
    $end            reduce using rule 64 (empty -> .)
    RCURLY          reduce using rule 64 (empty -> .)
    PRINT           shift and go to state 15
    RETURN          shift and go to state 33
    NOT             shift and go to state 11
    MINUS           shift and go to state 2
    LPAREN          shift and go to state 1
    NUMBER          shift and go to state 29
    REAL            shift and go to state 27
    STRING          shift and go to state 25
    LBRACKET        shift and go to state 8

    mathexpression                 shift and go to state 14
    block                          shift and go to state 3
    empty                          shift and go to state 4
    conditional                    shift and go to state 5
    comparison                     shift and go to state 18
    functioncall                   shift and go to state 22
    return                         shift and go to state 23
    variable                       shift and go to state 26
    lindex                         shift and go to state 17
    assignment                     shift and go to state 30
    print                          shift and go to state 6
    lentry                         shift and go to state 28
    stmt                           shift and go to state 19
    stmts                          shift and go to state 39
    logical                        shift and go to state 9
    function                       shift and go to state 10
    loop                           shift and go to state 16
    factor                         shift and go to state 12
    expression                     shift and go to state 13

state 6

    (14) stmt -> print .

    SEMICOLON       reduce using rule 14 (stmt -> print .)


state 7

    (8) conditional -> IF . LPAREN expression RPAREN block
    (9) conditional -> IF . LPAREN expression RPAREN block ELSE block

    LPAREN          shift and go to state 40


state 8

    (58) lentry -> LBRACKET . RBRACKET
    (59) lentry -> LBRACKET . list RBRACKET
    (60) list -> . listhead elem
    (61) listhead -> . listhead elem COMMA
    (62) listhead -> . empty
    (64) empty -> .

    RBRACKET        shift and go to state 44
    NOT             reduce using rule 64 (empty -> .)
    MINUS           reduce using rule 64 (empty -> .)
    LPAREN          reduce using rule 64 (empty -> .)
    NUMBER          reduce using rule 64 (empty -> .)
    REAL            reduce using rule 64 (empty -> .)
    STRING          reduce using rule 64 (empty -> .)
    LBRACKET        reduce using rule 64 (empty -> .)
    ID              reduce using rule 64 (empty -> .)

    listhead                       shift and go to state 42
    empty                          shift and go to state 41
    list                           shift and go to state 43

state 9

    (24) expression -> logical .
